--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,13 @@ h1 {
   font-size: 50px;
 }
 
+.checkbox-admin {
+  color: #A3A3A3;
+  font-family: 'Itim', sans-serif;
+  font-size: 16px;
+  text-align: right;
+}
+
 .login-form {
   width: 350px;
   padding: 40px 30px;
@@ -91,6 +98,7 @@ h1 {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
+  font-family: 'Itim', sans-serif;
 }
 
 .link {
@@ -106,7 +114,7 @@ h1 {
 }
 
 .alert {
-  display: none;
+  display: all;
   font-size: 12px;
   color: #f00;
   float: left;
