--- a/Prueba Titanios/css/style.css
+++ b/Prueba Titanios/css/style.css
@@ -85,6 +85,49 @@ h1 {
   border-color: #ed1c24;
   color: #ed1c24;
 }
+div.espaciosindiv {
+       background-color: white;
+      width: 20%;
+      height: 125px;
+      border: 2px solid black;
+      float: left;
+      margin-left: 3.5%;
+      margin-bottom: 20px;
+    }
+
+  div .titulo{
+    width: 100%;
+    height: 25px;
+    text-align: center;
+    }
+
+    
+  div .descripcion{
+    width: 100%;
+    height: 60px;
+    }
+  
+
+  div .boton{
+    width: 100%;
+    height: 30px;
+    }
+  
+      
+
+    div.estadistica {
+      background: url(../img/bg.jpg) no-repeat center center fixed;
+      width: 80%;
+      margin-left: 10%;
+      border: 2px solid black;
+      float: left;
+      margin-right: 20px;
+      margin-bottom: 20px;
+    }
+
+
+
+
 
 .mybutton {
 width: 100%;
